[gd_scene load_steps=32 format=3 uid="uid://d33evrlp3m0b2"]

[ext_resource type="Texture2D" uid="uid://qjh6kg0akd" path="res://player/sprites/pink_dance_sheet.png" id="1_agfs1"]
[ext_resource type="Script" uid="uid://cv0odle1i6pmp" path="res://player/player.gd" id="1_g2els"]
[ext_resource type="AudioStream" uid="uid://xiys4jxicp56" path="res://audio/sounds/boogie.ogg" id="3_3v2ag"]
[ext_resource type="Script" uid="uid://7rfh4ayn3joe" path="res://player/player_state_machine.gd" id="3_qhqgy"]
[ext_resource type="Texture2D" uid="uid://dxcjiepc5juf5" path="res://player/sprites/pink_idle_sheet.png" id="3_smehm"]
[ext_resource type="Texture2D" uid="uid://lm4rt28hmjhl" path="res://player/sprites/pink_smoke_idle_sheet.png" id="3_tqiix"]
[ext_resource type="Texture2D" uid="uid://bwog1p0vuabfm" path="res://player/sprites/pink_jump_sheet.png" id="3_tuyoq"]
[ext_resource type="Script" uid="uid://u648pfoiea8f" path="res://player/states/state_idle.gd" id="4_qlg0r"]
[ext_resource type="Texture2D" uid="uid://d0ph1y7duwwxm" path="res://player/sprites/pink_smoke_dance_sheet.png" id="5_c35mf"]
[ext_resource type="Script" uid="uid://caqbx1tvf57j3" path="res://player/states/state_walk.gd" id="5_tuyoq"]
[ext_resource type="AudioStream" uid="uid://cyjq7ynkxrfkr" path="res://audio/sounds/hop.ogg" id="5_y4r1p"]
[ext_resource type="AudioStream" uid="uid://i8byo2abt3lp" path="res://audio/sounds/land.ogg" id="6_d2wvv"]
[ext_resource type="Script" uid="uid://gvmw135h6vy" path="res://player/states/state_jump.gd" id="7_fjrip"]
[ext_resource type="Texture2D" uid="uid://d11ecq4ync7rg" path="res://player/sprites/pink_idle_squash_sheet.png" id="8_wodsf"]
[ext_resource type="Script" uid="uid://dayq1txltyn04" path="res://player/states/state_dance.gd" id="9_ur7pv"]
[ext_resource type="Texture2D" uid="uid://dt8uijxwk0v8b" path="res://player/sprites/pink_smoke_jump_sheet.png" id="10_65viv"]
[ext_resource type="Texture2D" uid="uid://chjvxrkw1en5j" path="res://player/sprites/pink_idle_sit_sheet.png" id="12_x7c3f"]
[ext_resource type="Script" uid="uid://dajtjbqqne2s7" path="res://player/states/state_squish.gd" id="14_32hag"]
[ext_resource type="Script" uid="uid://b8xh51u7ahk42" path="res://player/states/state_drive.gd" id="14_f1ej7"]
[ext_resource type="Script" uid="uid://bbuo24g7dc6dl" path="res://player/player_camera.gd" id="14_oprun"]
[ext_resource type="Script" path="res://player/states/state_sit.gd" id="20_bjvpn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_maef2"]
radius = 3.0

[sub_resource type="Animation" id="Animation_qhqgy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_agfs1")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/Sprite2DSmoke:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D/Sprite2DSmoke:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_c35mf")]
}

[sub_resource type="Animation" id="Animation_qlg0r"]
resource_name = "dance"
length = 1.044
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.043),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_agfs1")]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSounds")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_3v2ag")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = false
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/Sprite2DSmoke:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.044),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 7]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D/Sprite2DSmoke:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_c35mf")]
}

[sub_resource type="Animation" id="Animation_g2els"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_smehm")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/Sprite2DSmoke:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/Sprite2DSmoke:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_tqiix")]
}

[sub_resource type="Animation" id="Animation_fjrip"]
resource_name = "jump"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_tuyoq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.48),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 0.9), Vector2(1, 1)]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSounds")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_y4r1p")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_d2wvv")
}],
"times": PackedFloat32Array(0.1, 0.4)
}
tracks/3/use_blend = true
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D/Sprite2DSmoke:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_65viv")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D/Sprite2DSmoke:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 4]
}

[sub_resource type="Animation" id="Animation_s7qer"]
resource_name = "sit"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("12_x7c3f")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_32hag"]
resource_name = "squish"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_wodsf")]
}

[sub_resource type="Animation" id="Animation_smehm"]
resource_name = "walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_tuyoq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 4]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSounds")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_y4r1p")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_d2wvv")
}],
"times": PackedFloat32Array(0.1, 0.4)
}
tracks/2/use_blend = true
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("Sprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.48),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 0.8), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D/Sprite2DSmoke:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_65viv")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D/Sprite2DSmoke:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 4]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"footstep"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tuyoq"]
_data = {
&"RESET": SubResource("Animation_qhqgy"),
&"dance": SubResource("Animation_qlg0r"),
&"idle": SubResource("Animation_g2els"),
&"jump": SubResource("Animation_fjrip"),
&"sit": SubResource("Animation_s7qer"),
&"squish": SubResource("Animation_32hag"),
&"walk": SubResource("Animation_smehm")
}

[sub_resource type="AudioStreamPolyphonic" id="AudioStreamPolyphonic_x7c3f"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
y_sort_enabled = true
collision_layer = 65281
collision_mask = 22
input_pickable = true
script = ExtResource("1_g2els")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -15)
texture = ExtResource("1_agfs1")
hframes = 8

[node name="Sprite2DSmoke" type="Sprite2D" parent="Sprite2D"]
visible = false
texture = ExtResource("5_c35mf")
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_maef2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_tuyoq")
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_qhqgy")

[node name="idle" type="Node" parent="StateMachine"]
script = ExtResource("4_qlg0r")

[node name="walk" type="Node" parent="StateMachine"]
script = ExtResource("5_tuyoq")

[node name="jump" type="Node" parent="StateMachine"]
script = ExtResource("7_fjrip")

[node name="dance" type="Node" parent="StateMachine"]
script = ExtResource("9_ur7pv")

[node name="squish" type="Node" parent="StateMachine"]
script = ExtResource("14_32hag")

[node name="drive" type="Node" parent="StateMachine"]
script = ExtResource("14_f1ej7")

[node name="sit" type="Node" parent="StateMachine"]
script = ExtResource("20_bjvpn")

[node name="PlayerSounds" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-1, 0)
volume_db = -80.0
max_polyphony = 32
bus = &"sfx"

[node name="PlayerSoundFootsteps" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamPolyphonic_x7c3f")
volume_db = -20.0
autoplay = true
bus = &"sfx"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1, 0)
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("14_oprun")

[connection signal="car_enter" from="." to="StateMachine/drive" method="_on_player_car_enter"]
[connection signal="car_exit" from="." to="StateMachine/drive" method="_on_player_car_exit"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="player_click" from="." to="StateMachine/squish" method="_on_player_player_click"]
